# hpc-20-21

CUDA/: Cuda.ipynb  example.cu  example1.cu  hello.cu  shared_mem.cu  simple_sum.cu
avx/: mat_mul.c
c++threads/: CMakeLists.txt  a.out  arguments.cpp  array_of_threads.cpp  atomic.cpp  atomic_flag.cpp  harry  harry_potter.cpp  hello.cpp  recursive_mutex.cpp  shared_mutex.cpp
c++threads/bank_example/: bank  bank.cpp  bank_loop  bank_loop.cpp  bank_recursive  bank_recursive.cpp  bank_transfer  bank_transfer.cpp
c++threads/sem_2/: async.cpp  async_sum.cpp  atomic_bool.cpp  atomic_fence.cpp  consume.cpp  future.cpp  packeged_task.cpp  promise.cpp  rel_acq.cpp  relaxed_order.cpp  release_acquire.cpp  release_consume.cpp  seq_order.cpp  shared_future.cpp
mpi/: bcast.cpp  gather_scatter.cpp  gather_scatter_all.cpp  integ.cpp  life_game.cpp  life_game_gather.cpp  probe_rand_int.cpp  send_recv.cpp  send_recv_any.cpp  send_recv_probe.cpp
openmp/: CMakeLists.txt  adaptive_quadrature.cpp  array_reculc.cpp  barrier.cpp  false_sharing.cpp  for_loop.cpp  hello.cpp  integ.cpp  mandelbrot.cpp  nowait.cpp  optimization.cpp  sections.cpp  single.cpp  synchronization.cpp  task.cpp  var_between_threads.cpp  var_vis.cpp
openmp/buggy_examples/: bug1.cpp  bug2.cpp  bug3.cpp  bug4.cpp
pthreads/: CMakeLists.txt  README.md  array_sum.cpp  cond_variables.cpp  create_array_of_threads.cpp  create_thread.cpp  integral.cpp  main.cpp  matrix_multiplication.cpp  mutex_example.cpp  mutex_example_2.cpp  rw_lock.cpp
