cmake_minimum_required(VERSION 3.10)
project(openmp)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  -std=c++17 -fopenmp")
add_executable(openmp main.cpp)
add_executable(hello_omp hello.cpp )
add_executable(hello_omp_wrong hello_wrong.cpp)
add_executable(var_vis var_vis.cpp )
add_executable(for_loop for_loop.cpp )
add_executable(sections sections.cpp)
add_executable(integ integ.cpp)
add_executable(single single.cpp)
add_executable(nowait nowait.cpp)
add_executable(array_reculc array_reculc.cpp)