cmake_minimum_required(VERSION 3.10)
project(openmp)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  -std=c++17 -fopenmp")
add_executable(openmp main.cpp)
add_executable(hello_omp hello.cpp)
add_executable(var_vis var_vis.cpp )
add_executable(for_loop for_loop.cpp )
add_executable(sections sections.cpp)
add_executable(adaptive_quadrature adaptive_quadrature.cpp)
add_executable(single single.cpp)
add_executable(nowait nowait.cpp)
add_executable(array_reculc array_reculc.cpp)
add_executable(synchronization synchronization.cpp)
add_executable(integ integ.cpp)
add_executable(task task.cpp)
add_executable(barrier barrier.cpp)
add_executable(var_between_threads var_between_threads.cpp)
add_executable(mandelbrot mandelbrot.cpp)
add_executable(false_sharing false_sharing.cpp)
#add_executable(quick_sort quick_sort.cpp)
add_executable(optimization optimization.cpp)
add_executable(bug1 buggy_examples/bug1.cpp)
add_executable(bug2 buggy_examples/bug2.cpp)
add_executable(bug3 buggy_examples/bug3.cpp)