cmake_minimum_required(VERSION 3.10)
project(pthreads)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread")
add_executable(create_array_of_threads create_array_of_threads.cpp )
add_executable(create_thread create_thread.cpp)
add_executable(array_sum array_sum.cpp)
add_executable(integral integral.cpp)
add_executable(mutex_example mutex_example.cpp)
add_executable(matrix_multiplication matrix_multiplication.cpp)
add_executable(cond_variables cond_variables.cpp)
add_executable(rw_lock rw_lock.cpp)
add_executable(mutex_example_2 mutex_example_2.cpp)
